--- a/index.html
+++ b/index.html
@@ -53,38 +53,38 @@
   <body>
     <!-- nav bar : Logo -     - about - Work - CTA contact me  -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-none fixed-top">
-        <a class="navbar-brand ml-4" href="#">
-          <img src="img/SVG/ab_Logo_White.svg" width="30" height="30" alt="" />
-        </a>
-        <button
-          class="navbar-toggler mr-4"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarColor02"
-          aria-controls="navbarColor02"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
+      <a class="navbar-brand ml-4" href="#">
+        <img src="img/SVG/ab_Logo_White.svg" width="30" height="30" alt="" />
+      </a>
+      <button
+        class="navbar-toggler mr-4"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarColor02"
+        aria-controls="navbarColor02"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-        <div class="collapse navbar-collapse" id="navbarColor02">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <!-- <a class="nav-link float-right mr-4 active" href="#work">Work</a> -->
-              <a
-                class="nav-link uk-button uk-button-text mr-4 active"
-                href="#work"
-                >Work</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class=" mr-4 uk-button btn-warning" href="#contact"
-                >Contact Me</a
-              >
-            </li>
-          </ul>
-        </div>
+      <div class="collapse navbar-collapse" id="navbarColor02">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <!-- <a class="nav-link float-right mr-4 active" href="#work">Work</a> -->
+            <a
+              class="nav-link uk-button uk-button-text mr-4 active"
+              href="#work"
+              >Work</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class=" mr-4 uk-button btn-warning" href="#contact"
+              >Contact Me</a
+            >
+          </li>
+        </ul>
+      </div>
     </nav>
 
     <!-- first section : introduction  -->
@@ -125,7 +125,7 @@
                 class="uk-inline tm-image-card uk-transition-toggle"
                 tabindex="0"
               >
-              <div>
+                <div>
                   <div class="uk-card uk-card-default">
                     <div class="uk-card-media-top">
                       <img src="https://i.imgur.com/ZIi65is.png" alt="" />
@@ -133,11 +133,13 @@
                     <div class="uk-card-body">
                       <h3 class="uk-card-title">Dreamer</h3>
                       <p>
-                        An application to Write and share amazing stories and ideas,
-                        You can write about anything you want! 
+                        An application to Write and share amazing stories and
+                        ideas, You can write about anything you want!
                       </p>
                     </div>
-                    <div class="uk-position-cover uk-overlay uk-overlay-primary uk-transition-fade"></div>
+                    <div
+                      class="uk-position-cover uk-overlay uk-overlay-primary uk-transition-fade"
+                    ></div>
                   </div>
                 </div>
                 <div
@@ -177,7 +179,7 @@
                 class="uk-inline tm-image-card uk-transition-toggle"
                 tabindex="0"
               >
-              <div>
+                <div>
                   <div class="uk-card uk-card-default">
                     <div class="uk-card-media-top">
                       <img src="https://i.imgur.com/Tm4MI47.jpg" alt="" />
@@ -185,11 +187,14 @@
                     <div class="uk-card-body">
                       <h3 class="uk-card-title">ISIC Scheduler</h3>
                       <p>
-                        ASP Web app that allows multiple parties to organize a better School Schedule 
-                        and help them keep track of every group class
+                        ASP Web app that allows multiple parties to organize a
+                        better School Schedule and help them keep track of every
+                        group class
                       </p>
                     </div>
-                    <div class="uk-position-cover uk-overlay uk-overlay-primary uk-transition-fade"></div>
+                    <div
+                      class="uk-position-cover uk-overlay uk-overlay-primary uk-transition-fade"
+                    ></div>
                   </div>
                 </div>
                 <div
@@ -229,19 +234,21 @@
                 class="uk-inline tm-image-card uk-transition-toggle"
                 tabindex="0"
               >
-              <div>
+                <div>
                   <div class="uk-card uk-card-default">
                     <div class="uk-card-media-top">
-                      <img src="https://user-images.githubusercontent.com/26075149/50047516-f2db0a80-00b6-11e9-94a2-d2a8d39e1111.png" alt="" />
+                      <img src="https://i.imgur.com/4YiTYda.png" alt="" />
                     </div>
                     <div class="uk-card-body">
-                      <h3 class="uk-card-title">Symph</h3>
+                      <h3 class="uk-card-title">Mean Fun</h3>
                       <p>
-                        Php app to learn the symphony freamwork and it's structure,
-                        that interacts with a local mySql database
+                        Mean Stack app that shows you how to do basic
+                        interaction, and authentication, using the Http Client.
                       </p>
                     </div>
-                    <div class="uk-position-cover uk-overlay uk-overlay-primary uk-transition-fade"></div>
+                    <div
+                      class="uk-position-cover uk-overlay uk-overlay-primary uk-transition-fade"
+                    ></div>
                   </div>
                 </div>
                 <div
@@ -258,7 +265,8 @@
                   <p>
                     <a
                       class="uk-button tm-button-default"
-                      href="#"
+                      target="#"
+                      href="https://github.com/abayoss/meanFun/blob/master/README.md"
                       >Details</a
                     >
                   </p>
@@ -266,7 +274,7 @@
                     <a
                       class="uk-button btn-warning"
                       target="#"
-                      href="https://github.com/abayoss/SYMPH"
+                      href="https://github.com/abayoss/meanfun"
                       ><i class="fa fa-github"></i> Source</a
                     >
                   </p>
