--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
             <h4>
               <a
                 class="uk-button px-0"
-                href="https://drive.google.com/file/d/19l2DkOxoHzbSHbnAtqT7AstwPCK1Et7X/view?usp=sharing"
+                href="https://docs.google.com/document/d/1m6yDTt4siwRSnCA-vjilGqYO72vHRz3uqFZfw2lchuo"
                 target="#"
               >
                 <i class="fa fa-file-pdf-o"></i>
