--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
             <h4>
               <a
                 class="uk-button px-0"
-                href="https://docs.google.com/document/d/1m6yDTt4siwRSnCA-vjilGqYO72vHRz3uqFZfw2lchuo"
+                href="https://drive.google.com/open?id=1o9dAWlOfaCI4nXn_yI_Z_dE5GV45vv1p"
                 target="#"
               >
                 <i class="fa fa-file-pdf-o"></i>
