--- a/work.html
+++ b/work.html
@@ -53,7 +53,7 @@
   <body>
     <!-- nav bar | about | Work | CTA contact me -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-      <a class="navbar-brand ml-4" href="#">
+      <a class="navbar-brand ml-4" href="/">
         <img src="img/SVG/ab_Logo_White.svg" width="30" height="30" alt="" />
       </a>
       <button
@@ -87,23 +87,10 @@
       </div>
     </nav>
 
-    <!-- first section : introduction  -->
-    <section class="blackBack halfSection pt-5">
+    <!-- first section : hero  -->
+    <section class="projectBack halfSection pt-5">
       <div class="container pt-5">
-        <div class="VH pt-5">
-          <div class="row">
-            <div class="col-md-8">
-              <h2>Oussma abaayous</h2>
-              <h6 class="mt-3">
-                A Moroccan Web Developer, based in Rabat.
-              </h6>
-              <h6>
-                He dedicates his time to develop products and create useful
-                services, mostly built with Angular and Express.
-              </h6>
-            </div>
-          </div>
-        </div>
+        <div class="VH pt-5"></div>
         <!-- begin Scroll Down Button -->
         <button
           type="button"
@@ -119,45 +106,11 @@
       <div class="container pt-5">
         <h3 class="black slideUp">Work</h3>
         <!-- dynamic Work Section  -->
-        <div class="row top_work_grid"></div>
-        <button type="button" onclick="location.href = 'work.html';" class="more_work slideUp uk-button btn-warning">
-          more...
-        </button>
+        <div class="row work_grid"></div>
       </div>
     </section>
 
-    <!-- skill Section  -->
-    <section class="Grey white halfSection pt-5" id="work">
-      <div class="container">
-        <div class="row ">
-          <div class="col-md-8">
-            <h3 class="black">Working with</h3>
-            <ul class="uk-list uk-list-divider">
-              <li></li>
-              <li>Angular 2 ++</li>
-              <li>Node & Express JS</li>
-              <li>Symfony</li>
-              <li></li>
-            </ul>
-          </div>
-          <div class="col-md-4 border-left">
-            <h3 class="black">Familiar with</h3>
-            <ul class="uk-list uk-list-divider">
-              <li></li>
-              <li>RXJS</li>
-              <li>laravel</li>
-              <li>Asp .net</li>
-              <li></li>
-            </ul>
-          </div>
-          <!-- <button type="button" class="more_skills slideUp uk-button">
-            more...
-          </button> -->
-        </div>
-      </div>
-    </section>
-
-    <!-- Contact Form and warning Section -->
+    <!-- Contact Form and Links -->
     <Section id="contact" class="border-top pt-4">
       <div class="container">
         <div class="row pt-5">
@@ -198,30 +151,30 @@
                   placeholder="your email goes here..."
                   required
                 />
-                <div class="form-group mt-2">
-                  <label for="messageText">
-                    <i class="fa fa-envelope-open" aria-hidden="true"></i>
-                    Message</label
-                  >
-                  <textarea
-                    class="uk-textarea"
-                    name="message"
-                    id="message"
-                    rows="4"
-                    placeholder="Message goes here..."
-                    required
-                  ></textarea>
-                </div>
-                <button
-                  type="submit"
-                  name=""
-                  id=""
-                  class="uk-button btn-warning mt-5 btn-block"
-                >
-                  Send
-                  <i class="fa fa-paper-plane" aria-hidden="true"></i>
-                </button>
               </div>
+              <div class="form-group mt-2">
+                <label for="messageText">
+                  <i class="fa fa-envelope-open" aria-hidden="true"></i>
+                  Message</label
+                >
+                <textarea
+                  class="uk-textarea"
+                  name="message"
+                  id="message"
+                  rows="4"
+                  placeholder="Message goes here..."
+                  required
+                ></textarea>
+              </div>
+              <button
+                type="submit"
+                name=""
+                id=""
+                class="uk-button btn-warning mt-3 btn-block"
+              >
+                Send
+                <i class="fa fa-paper-plane" aria-hidden="true"></i>
+              </button>
             </form>
             <!-- social Media  -->
             <h3>More Links</h3>
@@ -258,7 +211,7 @@
               </li> -->
             </ul>
           </div>
-          <!-- personal warning  -->
+          <!-- personal section  -->
           <div class="col-md-4">
             <div class="slideLeft pb-2 mb-3">
               <img
@@ -277,7 +230,7 @@
               <p>
                 <a
                   class=" list-group-item list-group-item-action"
-                  href="https://docs.google.com/document/d/1m6yDTt4siwRSnCA-vjilGqYO72vHRz3uqFZfw2lchuo"
+                  href="https://drive.google.com/file/d/19l2DkOxoHzbSHbnAtqT7AstwPCK1Et7X/view?usp=sharing"
                   target="#"
                 >
                   <i class="fa fa-file-pdf-o"></i>
@@ -292,9 +245,9 @@
 
     <!-- scripts -->
     <script src="assets/js/displayProjects.js"></script>
+    <script src="assets/js/ScrollButton.js"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="assets/js/AnimationOnScroll.js"></script>
-    <script src="assets/js/ScrollButton.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
