--- a/work.html
+++ b/work.html
@@ -102,8 +102,8 @@
     </section>
 
     <!-- Work Section  -->
-    <section class="Grey pt-5" id="work">
-      <div class="container pt-5">
+    <section class="Grey py-5" id="work">
+      <div class="container py-5">
         <h3 class="black slideUp">Work</h3>
         <!-- dynamic Work Section  -->
         <div class="row work_grid"></div>
