--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
     </section>
 
     <!-- Work Section  -->
-    <section class="Grey pt-5" id="work">
-      <div class="container pt-5">
+    <section class="Grey py-5" id="work">
+      <div class="container py-5">
         <h3 class="black slideUp">Work</h3>
         <!-- dynamic Work Section  -->
         <div class="row top_work_grid"></div>
