half section height restriction

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     </section>
 
     <!-- skill Section  -->
-    <section class="Grey white halfSection pt-5" id="work">
+    <section class="Grey white halfSection py-5" id="work">
       <div class="container">
         <div class="row ">
           <div class="col-md-8">
