more projects btn postion

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
     <!-- first section : introduction  -->
     <section class="blackBack halfSection pt-5">
-      <div class="container pt-5">
+      <div class="container py-5">
         <div class="VH pt-5">
           <div class="row">
             <div class="col-md-8">
@@ -116,7 +116,7 @@
 
     <!-- Work Section  -->
     <section class="Grey py-5" id="work">
-      <div class="container py-5">
+      <div class="container">
         <h3 class="black slideUp">Work</h3>
         <!-- dynamic Work Section  -->
         <div class="row top_work_grid"></div>
