mobile nav bar btn width

--- a/work.html
+++ b/work.html
@@ -79,7 +79,7 @@
             >
           </li>
           <li class="nav-item">
-            <a class=" mr-4 uk-button btn-warning" href="#contact"
+            <a class=" mr-4 uk-button btn-warning" href="#contact" style="width: 100%;"
               >Contact Me</a
             >
           </li>
