--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="VH pt-5">
           <div class="row">
             <div class="col-md-8">
-              <h2>Oussma abaayous</h2>
+              <h2>Oussama abaayous</h2>
               <h6 class="mt-3">
                 A Moroccan Web Developer, based in Rabat.
               </h6>
