--- a/work.html
+++ b/work.html
@@ -230,7 +230,7 @@
               <p>
                 <a
                   class=" list-group-item list-group-item-action"
-                  href="https://drive.google.com/file/d/19l2DkOxoHzbSHbnAtqT7AstwPCK1Et7X/view?usp=sharing"
+                  href="https://docs.google.com/document/d/1m6yDTt4siwRSnCA-vjilGqYO72vHRz3uqFZfw2lchuo"
                   target="#"
                 >
                   <i class="fa fa-file-pdf-o"></i>
