--- a/index.html
+++ b/index.html
@@ -1,314 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <!-- icons / theme color -->
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="img/favicon_package_v0.16/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="img/favicon_package_v0.16/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="img/favicon_package_v0.16/favicon-16x16.png"
-    />
-    <link rel="manifest" href="img/favicon_package_v0.16//site.webmanifest" />
-    <link
-      rel="mask-icon"
-      href="img/favicon_package_v0.16//safari-pinned-tab.svg"
-      color="#5bbad5"
-    />
-    <meta name="msapplication-TileColor" content="#9f00a7" />
-    <meta name="theme-color" content="#ffffff" />
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <!-- links start -->
+        <div w3-include-html="partials/headLinks.html"></div>
+        <!-- links end -->
+        <title>Mr.abayoss</title>
+    </head>
+    <body>
+        <!-- layout/navbar start -->
+        <div w3-include-html="layout/nav.html"></div>
+        <!-- layout/navbar end -->
 
-    <!-- ui kit cdn -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.4/css/uikit.min.css"
-    />
-    <!-- bootswatch / font awesome CDN -->
-    <link
-      rel="stylesheet"
-      href="https://bootswatch.com/4/cyborg/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+        <!-- pages/main start -->
+        <div w3-include-html="pages/landing.html"></div>
+        <!-- pages/main end -->
 
-    <!-- Main css -->
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <title>Mr.Abaayous</title>
-  </head>
-  <body>
-    <!-- nav bar | about | Work | CTA contact me -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-      <a class="navbar-brand ml-4" href="#">
-        <img src="img/SVG/ab_Logo_White.svg" width="30" height="30" alt="" />
-      </a>
-      <button
-        class="navbar-toggler mr-4"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarColor02"
-        aria-controls="navbarColor02"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
+        <!-- layout/footer start  -->
+        <div w3-include-html="layout/footer.html"></div>
+        <!-- layout/footer start  -->
+        
+        <script src="assets/js/w3htmlInclude.js"></script>
+        <script>
+            includeHTML();
+        </script>
 
-      <div class="collapse navbar-collapse" id="navbarColor02">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <!-- <a class="nav-link float-right mr-4 active" href="#work">Work</a> -->
-            <a
-              class="nav-link uk-button uk-button-text mr-4 active"
-              href="#work"
-              >Work</a
-            >
-          </li>
-          <li class="nav-item">
-            <a class="mr-4 uk-button btn-warning" href="#contact" style="width: 100%;"
-              >Contact Me</a
-            >
-          </li>
-        </ul>
-      </div>
-    </nav>
-
-    <!-- first section : introduction  -->
-    <section class="blackBack halfSection pt-5">
-      <div class="container py-5">
-        <div class="VH pt-5">
-          <div class="row">
-            <div class="col-md-8">
-              <h2>Oussama abaayous</h2>
-              <h6 class="mt-3">
-                A Moroccan Web Developer, based in Rabat.
-              </h6>
-              <h6>
-                He dedicates his time to develop products and create useful
-                services, mostly built with Angular and Express.
-              </h6>
-            </div>
-          </div>
-        </div>
-        <!-- begin Scroll Down Button -->
-        <button
-          type="button"
-          class="scroll_down slideUp"
-          id="scroll_down"
-        ></button>
-        <!-- end Scroll Down Button -->
-      </div>
-    </section>
-
-    <!-- Work Section  -->
-    <section class="Grey py-5" id="work">
-      <div class="container">
-        <h3 class="black slideUp">Work</h3>
-        <!-- dynamic Work Section  -->
-        <div class="row top_work_grid"></div>
-        <button type="button" onclick="location.href = 'work.html';" class="more_work slideUp uk-button btn-warning">
-          more...
-        </button>
-      </div>
-    </section>
-
-    <!-- skill Section  -->
-    <section class="Grey white halfSection py-5" id="work">
-      <div class="container">
-        <div class="row ">
-          <div class="col-md-8">
-            <h3 class="black">Working with</h3>
-            <ul class="uk-list uk-list-divider">
-              <li></li>
-              <li>Angular 2 ++</li>
-              <li>Node & Express JS</li>
-              <li>Symfony</li>
-              <li></li>
-            </ul>
-          </div>
-          <div class="col-md-4 border-left">
-            <h3 class="black">Familiar with</h3>
-            <ul class="uk-list uk-list-divider">
-              <li></li>
-              <li>RXJS</li>
-              <li>laravel</li>
-              <li>Asp .net</li>
-              <li></li>
-            </ul>
-          </div>
-          <!-- <button type="button" class="more_skills slideUp uk-button">
-            more...
-          </button> -->
-        </div>
-      </div>
-    </section>
-
-    <!-- Contact Form and warning Section -->
-    <Section id="contact" class="border-top pt-4">
-      <div class="container">
-        <div class="row pt-5">
-          <div class="slideRight col-md-8 mb-4 border-right">
-            <h3>Contact Me</h3>
-            <!-- Email Form and address -->
-            <form
-              action="https://formcarry.com/s/v0Z3vC5PTtY"
-              method="post"
-              accept-charset="UTF-8"
-            >
-              <div class="form-group mt-2">
-                <label for="">
-                  <i class="fa fa-bullseye" aria-hidden="true"></i>
-                  Name</label
-                >
-                <input
-                  class="uk-input"
-                  type="text"
-                  name="name"
-                  id="name"
-                  aria-describedby="helpId"
-                  placeholder="your name goes here..."
-                  required
-                />
-              </div>
-              <div class="form-group">
-                <label for="">
-                  <i class="fa fa-at" aria-hidden="true"></i>
-                  Email</label
-                >
-                <input
-                  class="uk-input"
-                  type="text"
-                  name="email"
-                  id="email"
-                  aria-describedby="helpId"
-                  placeholder="your email goes here..."
-                  required
-                />
-                <div class="form-group mt-2">
-                  <label for="messageText">
-                    <i class="fa fa-envelope-open" aria-hidden="true"></i>
-                    Message</label
-                  >
-                  <textarea
-                    class="uk-textarea"
-                    name="message"
-                    id="message"
-                    rows="4"
-                    placeholder="Message goes here..."
-                    required
-                  ></textarea>
-                </div>
-                <button
-                  type="submit"
-                  name=""
-                  id=""
-                  class="uk-button btn-warning mt-5 btn-block"
-                >
-                  Send
-                  <i class="fa fa-paper-plane" aria-hidden="true"></i>
-                </button>
-              </div>
-            </form>
-            <!-- social Media  -->
-            <h3>More Links</h3>
-            <ul class="uk-list uk-list-divider">
-              <li>
-                <a
-                  href="https://www.github.com/abayoss"
-                  target="#"
-                  class="list-group-item list-group-item-action"
-                >
-                  <i class="fa fa-github" aria-hidden="true"></i>
-                  Github
-                </a>
-              </li>
-              <li>
-                <a
-                  href="http://linkedin.com/in/oussama-abaayous/"
-                  target="#"
-                  class="list-group-item list-group-item-action"
-                >
-                  <i class="fa fa-linkedin" aria-hidden="true"></i>
-                  Linkedin
-                </a>
-              </li>
-              <!-- <li>
-                <a
-                  href="https://www.instagram.com/mr_abayoss/"
-                  target="#"
-                  class="list-group-item list-group-item-action noBorderRadius"
-                >
-                  <i class="fa fa-instagram" aria-hidden="true"></i>
-                  instagram
-                </a>
-              </li> -->
-            </ul>
-          </div>
-          <!-- personal warning  -->
-          <div class="col-md-4">
-            <div class="slideLeft pb-2 mb-3">
-              <img
-                src="https://avatars0.githubusercontent.com/u/26075149?s=460&v=4"
-                class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}"
-                alt=""
-              />
-            </div>
-            <div class="slideLeft mb-auto pb-2 mb-3">
-              <h4><i class="fa fa-at" aria-hidden="true"></i> Email</h4>
-              <p>Abaayous.oussama@gmail.com</p>
-              <h4><i class="fa fa-map" aria-hidden="true"></i> Address</h4>
-              <p>
-                Morocco, Rabat
-              </p>
-              <p>
-                <a
-                  class=" list-group-item list-group-item-action"
-                  href="https://docs.google.com/document/d/1m6yDTt4siwRSnCA-vjilGqYO72vHRz3uqFZfw2lchuo"
-                  target="#"
-                >
-                  <i class="fa fa-file-pdf-o"></i>
-                  Curriculum Vitae
-                </a>
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </Section>
-
-    <!-- scripts -->
-    <script src="assets/js/displayProjects.js"></script>
-    <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="assets/js/AnimationOnScroll.js"></script>
-    <script src="assets/js/ScrollButton.js"></script>
-    <script
-      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+        <script src="assets/js/main.js"></script>
+        <script src="assets/js/loadProjects.js"></script>
+        <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
+        <script src="assets/js/AnimationOnScroll.js"></script>
+        <!-- <script src="assets/js/ScrollButton.js"></script> -->
+        <script
+            src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"
+        ></script>
+    </body>
 </html>
