--- a/index.html
+++ b/index.html
@@ -4,6 +4,36 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <!-- icons / theme color -->
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="assets/img/favicon_package_v0.16/apple-touch-icon.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="assets/img/favicon_package_v0.16/favicon-32x32.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="assets/img/favicon_package_v0.16/favicon-16x16.png"
+        />
+        <link
+            rel="manifest"
+            href="assets/img/favicon_package_v0.16//site.webmanifest"
+        />
+        <link
+            rel="mask-icon"
+            href="assets/img/favicon_package_v0.16//safari-pinned-tab.svg"
+            color="#5bbad5"
+        />
+        <meta name="msapplication-TileColor" content="#9f00a7" />
+        <meta name="theme-color" content="#ffffff" />
+
         <!-- links start -->
         <div w3-include-html="partials/headLinks.html"></div>
         <!-- links end -->
