NEGATIVE : margin & color

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <main>
             <!-- first section : introduction  -->
             <section
-                class="bg-black-img halfSection pt-5 animated reveal"
+                class="bg-black-img pt-5 animated reveal"
                 id="intro"
             >
                 <div class="container py-5">
@@ -80,8 +80,8 @@
 
             <!-- Work Section  -->
             <section class="bg-grey slideLeft1 py-5 animated" id="work">
-                <div class="container">
-                    <h3 class="text-black animated slideUp">Work</h3>
+                <div class="container negative-margin">
+                    <h4 class="animated slideUp negative-color">Work</h4>
                     <!-- dynamic Work Section  -->
                     <div
                         class="row top_work_grid mb-5 animated slideRight2"
@@ -104,7 +104,7 @@
                 <div class="container">
                     <div class="row animated slideLeft2">
                         <div class="col-md-8">
-                            <h3 class="text-black">Working with</h3>
+                            <h4 class="text-black">Working with</h4>
                             <ul class="uk-list uk-list-divider">
                                 <li></li>
                                 <li>Angular 2 ++</li>
@@ -114,7 +114,7 @@
                             </ul>
                         </div>
                         <div class="col-md-4 border-left2">
-                            <h3 class="text-black">Familiar with</h3>
+                            <h4 class="text-black">Familiar with</h4>
                             <ul class="uk-list uk-list-divider">
                                 <li></li>
                                 <li>RXJS</li>
