--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 id="skill"
             >
                 <div class="container">
-                    <div class="row slideLeft2">
+                    <div class="row animated slideLeft2">
                         <div class="col-md-8">
                             <h4 class="text-black">Working with</h4>
                             <ul class="uk-list uk-list-divider">
