body hidden till loaded

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <!-- links end -->
         <title>Mr.abayoss</title>
     </head>
-    <body>
+    <body class="reveal" style="visibility: hidden;">
         <!-- layout/navbar start -->
         <div w3-include-html="layout/nav.html"></div>
         <!-- layout/navbar end -->
