--- a/index.html
+++ b/index.html
@@ -104,22 +104,24 @@
                 <div class="container">
                     <div class="row animated slideLeft2">
                         <div class="col-md-8">
-                            <h4 class="text-black">Working with</h4>
+                            <h4 class="text-black">Tech i'm working with</h4>
                             <ul class="uk-list uk-list-divider">
                                 <li></li>
                                 <li>Angular 2 ++</li>
                                 <li>Node & Express JS</li>
-                                <li>Symfony</li>
+                                <li>Reactive Extensions</li>
+                                <li>PHP : Symfony</li>
                                 <li></li>
                             </ul>
                         </div>
                         <div class="col-md-4 border-left2">
-                            <h4 class="text-black">Familiar with</h4>
+                            <h4 class="text-black">Tech i'm familiar with</h4>
                             <ul class="uk-list uk-list-divider">
                                 <li></li>
-                                <li>RXJS</li>
-                                <li>laravel</li>
-                                <li>Asp .net</li>
+                                <li>Bootstrap, Sass, Less</li>
+                                <li>Wordpress, Drupal</li>
+                                <li>PHP : laravel</li>
+                                <li>C# Asp .net</li>
                                 <li></li>
                             </ul>
                         </div>
