--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                                 <li>Angular 2 ++</li>
                                 <li>Node & Express JS</li>
                                 <li>Reactive Extensions</li>
-                                <li>PHP : Symfony</li>
+                                <li>PHP : Symfony & Codeigniter</li>
                                 <li></li>
                             </ul>
                         </div>
