--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
                             <h4 class="text-black">Tech i'm working with</h4>
                             <ul class="uk-list uk-list-divider">
                                 <li></li>
-                                <li>Angular 2 ++</li>
+                                <li>Vue js</li>
                                 <li>Node & Express JS</li>
-                                <li>Reactive Extensions</li>
-                                <li>PHP : Symfony</li>
+                                <li>PHP : laravel, codeigniter</li>
+                                <li>Angular 2 ++</li>
                                 <li></li>
                             </ul>
                         </div>
@@ -120,7 +120,7 @@
                                 <li></li>
                                 <li>Bootstrap, Sass, Less</li>
                                 <li>Wordpress, Drupal</li>
-                                <li>PHP : laravel</li>
+                                <li>PHP : symfony</li>
                                 <li>C# Asp .net</li>
                                 <li></li>
                             </ul>
