--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <!-- Work Section  -->
         <section class="slideLeft1 py-5" id="work">
             <div class="container negative-margin animated">
-                <h4 class="animated slideUp negative-color">Work</h4>
+                <h4 class="animated slideUp">Work</h4>
                 <!-- dynamic Work Section  -->
                 <div class="row top_work_grid mb-5 animated slideRight2"></div>
                 <!-- <button
