skills section paralax bg

--- a/src/index.html
+++ b/src/index.html
@@ -124,11 +124,13 @@
 
 
         <!-- skill Section  -->
-        <section class="animated slideRight1 bg-grey halfSection py-5" id="skill">
+        <section class="animated slideRight1 halfSection py-5" id="skill">
+            <div class="bg-skills-img"></div>
+            <div class="bg-skills-overlay"></div>
             <div class="container">
                 <div class="row animated slideLeft2">
                     <div class="col-md-8">
-                        <h4 class="text-black">Tech i'm working with</h4>
+                        <h4>Tech i'm working with</h4>
                         <ul class="uk-list uk-list-divider">
                             <li></li>
                             <li>Vue Js</li>
@@ -140,7 +142,7 @@
                         </ul>
                     </div>
                     <div class="col-md-4 border-left2">
-                        <h4 class="text-black">Tech i'm familiar with</h4>
+                        <h4>Tech i'm familiar with</h4>
                         <ul class="uk-list uk-list-divider">
                             <li></li>
                             <li>Sass, Less</li>
@@ -287,7 +289,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollTrigger.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js"></script>
     <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
