--- a/src/index.html
+++ b/src/index.html
@@ -56,11 +56,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8">
-                        <h2>Oussama abaayous</h2>
-                        <h6 id="quote1" class="mt-3">
+                        <h1>Oussama abaayous</h1>
+                        <h6 class="mt-3">
                             A Moroccan Web Developer, based in Rabat.
                         </h6>
-                        <h6 id="quote2">
+                        <h6>
                             He dedicates his time to develop products
                             and create useful services, mostly built
                             with Vue and node JS.
