--- a/src/index.html
+++ b/src/index.html
@@ -186,7 +186,7 @@
                             class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}"
                             alt="" />
                     </div>
-                    <div class="mb-auto pb-2 mb-3">
+                    <div class="pb-2 mb-3">
                         <div class="uk-text-center text-white">
                             <p>🔥 Got a new idea ? Let's make it happen ! 🔥</p>
                         </div>
