--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <!-- icons / theme color -->
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon_package_v0.16/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon_package_v0.16/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon_package_v0.16/favicon-16x16.png" />
-
+    <link rel="mask-icon" href="img/favicon_package_v0.16/safari-pinned-tab.svg" color="#5bbad5" />
+    <meta name="msapplication-TileColor" content="#9f00a7" />
+    <meta name="theme-color" content="#ffffff" />
+    <link rel="manifest" href="./manifest.webmanifest" />
     <title>Mr.abayoss</title>
 
     <!-- links start -->
@@ -52,7 +56,9 @@
                     <a class="nav-link uk-button uk-button-text active" href="#work">Work</a>
                 </li> -->
                 <li class="nav-item">
-                    <a class="nav-link uk-button uk-button-text active" href="#contact" style="width: 100%;">Contact Me</a>
+                    <a class="nav-link uk-button uk-button-text active" href="#contact" style="width: 100%;">
+                        Contact Me
+                    </a>
                 </li>
             </ul>
         </div>
